# automatic-idf-graphs

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Results/: cemaden_jardim_daily.csv
Results/inmet_sp/: IDF_params_inmet_sp_p0.2.csv  inmet_sp_monthly.csv  inmet_sp_yearly.csv  max_subdaily_inmet_sp_ger.csv
bias_analysis/: data_processing_gcm.py
datasets/CEMADEN_SP/: data (11).csv  data (13).csv  data (14).csv  data (15).csv  data (23).csv  data (24).csv  data (25).csv  data (28).csv  data (30).csv  data (46).csv  data (47).csv  data (48).csv  data (49).csv  data (51).csv  data (53).csv  data (56).csv  data (57).csv  data (59).csv  data (61).csv  data (69).csv  data (70).csv  data (71).csv  data (72).csv  data (73).csv  data (74).csv  data (75).csv  data (76).csv  data (78).csv  data (80).csv  data (81).csv  data (82).csv  data (83).csv  data (84).csv  data (92).csv
gcm_simulations/: chmyd_bias_correction.py  dbc_bias_correction.py  gcm_data_analysis.py  quant_map_bias_correction.py
notebooks/: 01-data-exploration.ipynb  01_Data_Acquisition_and_Preparation.ipynb.ipynb  02_Quality_Analysis_and_Exploratory_Statistics.ipynb  03_Historical_IDF_Curve_Generation.ipynb  04_Future_IDF_Curve_Generation_with_Bias_Correction.ipynb  05_Bartlett_Lewis_Disaggregation.ipynb  Usage_Flow.ipynb
parameters/: estacoes_inmet.csv
scripts/: README.md  download_data.py
utils/: data_processing.py  error_correction.py  extreme_precipitation_analysis.py  extreme_precipitation_visualization.py  get_datasets.py  get_distribution.py  idf_generator.py  quality_analysis.py
(+70 files in other folders)
